Support configurable CSRF trusted origins for HTTPS

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ PUBLIC_HTTPS_PORT=443
 DJANGO_SECRET_KEY=change-me
 DJANGO_DEBUG=0
 DJANGO_ALLOWED_HOSTS=*
+DJANGO_CSRF_TRUSTED_ORIGINS=
 POSTGRES_DB=zapui
 POSTGRES_USER=zapui
 POSTGRES_PASSWORD=zapui
